# ymemo

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FINAL_MIGRATION_REPORT.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_azure_speech_provider.py
.github/: dependabot.yml  test-env.sh
.github/workflows/: ci.yml  ci.yml.backup  code-quality.yml
config/: audio_config.py
db/: __init__.py
db/migrations/: 001_baseline_ymemo_table.sql  002_create_persona_table.sql  003_add_updated_at_to_ymemo.sql  __init__.py
db/seeds/: __init__.py  default_personas.sql
db/tools/: __init__.py  migration_runner.py
src/analytics/: session_analytics.py
src/audio/: audio_file_writer.py  audio_saver.py  channel_processor.py  channel_splitter.py  dual_connection_error_handler.py  result_merger.py  silence_detector.py
src/audio/providers/: aws_transcribe.py  aws_transcribe_dual.py  azure_speech.py  file_audio_capture.py  pyaudio_capture.py
src/config/: audio_config.py  language_config.py  provider_config.py  provider_registry.py
src/core/: __init__.py  factory.py  interfaces.py  models.py  pipeline_error_handler.py  pipeline_monitor.py  processor.py  resource_manager.py
src/exceptions/: provider_exceptions.py
src/managers/: __init__.py  enhanced_session_manager.py  meeting_repository.py  persona_repository.py  session_lifecycle_manager.py  session_manager.py
src/services/: provider_service.py
src/ui/: audio_quality_handlers.py  button_state_manager.py  interface.py  interface.py.backup  interface_constants.py  interface_dialog_handlers.py  interface_handlers.py  interface_styles.py  interface_utils.py  language_handlers.py  meeting_handlers.py  persona_handlers.py  provider_handlers.py  recording_handlers.py
src/utils/: database.py  device_utils.py  exceptions.py  status_manager.py
tests/: README.md  __init__.py  conftest.py  create_test_audio.py  test_all_stop_recording.py  test_aws_connection.py  test_button_state_manager.py  test_connection_monitoring.py  test_core_functionality.py  test_device_selection.py  test_enhanced_session_manager.py  test_interface_dialog_handlers.py  test_long_recording_deduplication.py  test_meeting_handlers.py  test_partial_results.py  test_pipeline_error_handling.py  test_pipeline_monitoring.py  test_provider_error_handling.py  test_provider_factory.py  test_recording_handlers.py  test_resource_management.py  test_session_analytics.py  test_session_lifecycle_manager.py  test_session_manager_stop.py  test_stop_recording_comprehensive.py  test_ui_integration.py  test_with_audio_file.py
tests/audio/: test_audio_saving.py  test_device_capability.py  test_device_selection.py
tests/aws/: test_aws_connection.py
tests/base/: __init__.py  async_test_base.py  base_test.py
tests/config/: __init__.py  test_audio_config_validation.py  test_audio_quality_functions.py  test_configs.py  test_constants.py  test_provider_config.py  test_provider_registry.py  test_provider_service.py
tests/fixtures/: __init__.py  async_mocks.py  aws_mocks.py  mock_factories.py
tests/integration/: __init__.py  test_config_flow.py  test_real_aws_integration.py
tests/providers/: test_azure_provider.py  test_dual_provider_system.py  test_provider_error_handling.py  test_provider_factory.py  test_provider_lifecycle.py
tests/unit/: __init__.py  test_enhanced_session_manager.py  test_session_manager_stop.py
tests/utils/: audio_test_utils.py
